--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
     compile:
-        name: Teaiso
+        name: Teaisotest
         runs-on: ubuntu-latest
         steps:
           - name: Check out the repo
